syntax = "proto3";

package EndDeviceProtocol;

// enum DataTypes {
//     INT8 = 0;
//     UINT8 = 1;
//     INT16 = 2;
//     UINT16 = 3;
//     INT32 = 4;
//     UINT32 = 5;
//     INT64 = 6;
//     UINT64 = 7;
//     FLOAT = 8;
//     DOUBLE = 9;
// }

message Value {
    oneof value {
        uint32 _uint8_32 = 1;
        uint64 _uint64 = 2;
        sint32 _int8_32 = 3;
        sint64 _int64 = 4;
        float _float = 5;
        double _double = 6;
    }
}

enum ExpressionInstructions {
    CONST = 0;
    VAR = 1;
    AND = 2;
    OR = 3;
    NOT = 4;
    LT = 5;
    GT = 6;
    EQ = 7;
    ADD = 8;
    SUB = 9;
    MUL = 10;
    DIV = 11;
    MOD = 12;
}
message Data {
    oneof data{
        ExpressionInstructions instruction = 1;
        Value value = 2;
    }
}

message Output {
    message QueryResponse {
        int32 id = 1;
        repeated Value response = 2;
    }
    repeated QueryResponse responses = 1;
}

message Expression {
    repeated Data instructions = 1;
}

message MapOperation {
    repeated Data function = 1;
    int32 attribute = 2;
}

message FilterOperation {
    repeated Data predicate = 1;
}

enum WindowAggregationType {
    MIN = 0;
    MAX = 1;
    SUM = 2;
    AVG = 3;
    COUNT = 4;
}

enum WindowSizeType {
    TIMEBASED = 0;
    COUNTBASED = 1;
}

message WindowOperation {
    int32 size = 1;
    WindowSizeType sizeType = 2;
    WindowAggregationType aggregationType = 3;
    int32 startAttribute = 4;
    int32 endAttribute = 5;
    int32 resultAttribute = 6;
    int32 readAttribute = 7;
}

message Query {
    message Operation {
        MapOperation map = 1;
        FilterOperation filter = 2;
        WindowOperation window = 3;
    }
    //bytes resultType = 1; //For some reason minipb breaks if I make this a repeated enum or int32
    repeated Operation operations = 1;
    
}

message Message {
    repeated Query queries = 1;
}